# mina-recx

./: .gitignore  ARTIFACTS.md  README.md  main.py  pyproject.toml
configs/: datasets.yaml
data/processed/: benchmark.json  training_pairs.json
data/processed/train_dataset_hf/: data-00000-of-00001.arrow  dataset_info.json  state.json
results/: ablation_baseline.json  ablation_epochs_10.json  ablation_epochs_3.json  ablation_epochs_5.json  ablation_epochs_7.json  ablation_temp_0.02.json  ablation_temp_0.1.json  ablation_temp_0.2.json  all_ablation_results.json  baseline_LazarusNLP_all-NusaBERT-base-v4.json  baseline_LazarusNLP_all-indo-e5-small-v4.json  baseline_answerdotai_ModernBERT-base.json  baseline_intfloat_multilingual-e5-small.json  baseline_jina-v5-nano-retrieval.json  baseline_jinaai_jina-embeddings-v5-text-nano.json  finetuned_minang-embedder.json
scripts/: eval_ablations.py  plot_results.py
src/: run_pipeline.py
src/benchmark/: evaluate.py
src/data/: prepare_data.py
src/training/: train.py  train_tracked.py
tests/: test_pipeline.py
