[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "minang-embedder"
version = "0.1.0"
description = "Fine-tuned embeddings for Minangkabau semantic search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "faiss-cpu>=1.14.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
    "wandb>=0.27.0",
]

# flash-attn requires CUDA; keep it out of the default deps so `uv sync` works off-GPU.
[project.optional-dependencies]
gpu = [
    "flash-attn-4>=4.0.0b4",
]
